# zkaccess-c3-py

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  pyproject.toml  readme.md  requirements-dev.txt
.github/workflows/: build_test.yml  publish.yml
c3/: __init__.py  consts.py  controldevice.py  core.py  crc.py  rtlog.py  utils.py
cli/: C3_CancelAlarms.py  C3_Discover.py  C3_GetDeviceData.py  C3_GetDeviceParam.py  C3_GetRTLog.py  C3_OutputOperation.py  C3_SetDeviceDatetime.py
tests/: test_consts.py  test_controldevice.py  test_core.py  test_crc16.py  test_rtlog.py  test_utils.py
