[project]
name = "c3"
version = "0.0.1"
description = "A native Python library for communicating with the ZKAccess C3 Access Control Panels."
authors = [
    {name = "Vwout"},
]
license = "GPL-3.0-or-later"
readme = "readme.md"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["c3"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pylint]
max-line-length = 120
disable = ["C0114", "C0115", "C0116", "C0209", "R0801"]